Fine tuning in Kafka Cluster and topics configuration

--- a/.env
+++ b/.env
@@ -28,9 +28,19 @@ KAFKA_JMX_HOSTNAME=
 ##############################################
 SR_BOOTSTRAP_SERVERS=
 SR_LISTENERS=
+SR_EXTERNAL_PORT=
 
 ##############################################
 # Kafka REST Proxy
 ##############################################
 RP_BOOTSTRAP_SERVERS=
 RP_LISTENERS=
+RP_EXTERNAL_PORT=
+
+##############################################
+# Kafka UI
+##############################################
+KAFKA_UI_USERNAME=
+KAFKA_UI_PASSWORD=
+KAFKA_UI_EXTERNAL_PORT=
+KAFKA_UI_BOOTSTRAP_SERVERS=
