--- a/kafka-ui/config-single-broker.yaml
+++ b/kafka-ui/config-single-broker.yaml
@@ -4,7 +4,7 @@ auth:
   password: admin
 kafka:
   clusters:
-  - bootstrapServers: kafka-broker-1:29092,kafka-broker-2:29092,kafka-broker-3:29092
+  - bootstrapServers: kafka:29092
     metrics:
       port: 9101
       type: JMX
