--- a/multi-brokers.env
+++ b/multi-brokers.env
@@ -20,21 +20,20 @@ KAFKA_CONTROLLER_2_ID=2
 KAFKA_CONTROLLER_3_PORT=9094
 KAFKA_CONTROLLER_3_INTERNAL_PORT=9103 # The internal port is used for internal communication of Kafka
 KAFKA_CONTROLLER_3_ID=3
-TOPIC_REPLICATION_FACTOR=3 # Should be placed greater than 1 in Production
+TOPIC_REPLICATION_FACTOR=2 # Should be placed greater than 1 in Production
 KAFKA_JMX_HOSTNAME=localhost
-HOST_IP=10.151.64.136
 
 ##############################################
 # Kafka Schema Registry
 ##############################################
-SR_BOOTSTRAP_SERVERS='PLAINTEXT://kafka:29092'
+SR_BOOTSTRAP_SERVERS='PLAINTEXT://kafka-broker-1:29092,PLAINTEXT://kafka-broker-2:29092,PLAINTEXT://kafka-broker-3:29092'
 SR_LISTENERS=http://0.0.0.0:8081
 SR_EXTERNAL_PORT=8081
 
 ##############################################
 # Kafka REST Proxy
 ##############################################
-RP_BOOTSTRAP_SERVERS='kafka:29092'
+RP_BOOTSTRAP_SERVERS='kafka-broker-1:29092,kafka-broker-2:29092,kafka-broker-3:29092'
 RP_LISTENERS=http://0.0.0.0:8082
 RP_EXTERNAL_PORT=8082
 
@@ -44,4 +43,4 @@ RP_EXTERNAL_PORT=8082
 KAFKA_UI_USERNAME=admin
 KAFKA_UI_PASSWORD=admin
 KAFKA_UI_EXTERNAL_PORT=8095
-KAFKA_UI_BOOTSTRAP_SERVERS='kafka:29092'
+KAFKA_UI_BOOTSTRAP_SERVERS='kafka-broker-1:29092,kafka-broker-2:29092,kafka-broker-3:29092'
